# confidence_btr

./: README.md
cameras_pose_estimation/: CMakeLists.txt  package.xml
cameras_pose_estimation/launch/: camera_frames.launch  checkerboard_in_kuka.launch  flea_pose.launch  intel_pose.launch  kuka_frame.launch  pylon_pose.launch
cameras_pose_estimation/scripts/: checkerboard_flea.sh  checkerboard_intel.sh  checkerboard_pylon.sh  data_bagger.sh  frame_basler.sh  frame_checkerboard.sh  frame_flea.sh  frame_intel.sh  frame_kuka.sh  frame_optical_intel link.sh  frame_world.sh  jiawei_nir_shot.sh  test_video_recorder.sh
cameras_pose_estimation/src/: checkerboard_in_kuka.cpp  identification_pattern.cpp
confidence_models/: CMakeLists.txt  package.xml
confidence_models/ident_data/: p30a0_basler_vs_intel.csv  p30a0_markers3D.csv
confidence_models/include/: .confidence_functions.h.swp  confidence_functions.h  (+1 more)
manual_control/: CMakeLists.txt  package.xml
nir_blob_tracker/: CMakeLists.txt  package.xml
nir_overlay/: CMakeLists.txt  package.xml
nir_overlay/launch/: manual_interface.launch  manual_interface_flea.launch  nir_overlay.launch  nir_overlay_tumor.launch
nir_overlay/rviz/: confidence_videos.rviz  identification.rviz  lin_vs_3d.rviz  nir_overlay.rviz  nir_overlay_tumor.rviz  nir_traj.rviz  ral_figure.rviz  ral_video_path_figure.rviz  shared_dbg.rviz
nir_overlay/src/: node_intel.cpp  node_intel_tumor.cpp  overlay_2D.cpp  overlay_2D_flea.cpp
tissue_waypoints/: CMakeLists.txt  beforefreez.pcd  package.xml  results.pcd  resultsstep4.pcd  resultsstep5.pcd
(+52 files in other folders)
